# daily-trader

./: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: PROJECTS_SETUP.md  QUICK_START.md  WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  project-automation.yml  quality.yml
.kiro/specs/daily-market-tips/: design.md  requirements.md  tasks.md
.kiro/specs/observability-logging/: design.md  requirements.md  tasks.md
.kiro/specs/user-authentication/: design.md  requirements.md  tasks.md
frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FilterBar.css  FilterBar.jsx  FilterBar.test.jsx  MarketDataChart.css  MarketDataChart.jsx  Pagination.css  Pagination.jsx  Pagination.test.jsx  TipCard.css  TipCard.jsx  TipCard.test.jsx
frontend/src/pages/: CurrentTips.css  CurrentTips.jsx  LoginPage.css  LoginPage.jsx  LoginPage.test.jsx  OAuthCallback.css  OAuthCallback.jsx  (+5 more)
src/: __init__.py
src/api/: auth_routes.py  dependencies.py  error_handlers.py  routes.py  user_routes.py
src/database/: __init__.py  db.py  migrations.py  models.py
src/models/: auth_schemas.py  market_data.py  trading_tip.py
src/services/: analysis_engine.py  auth_user_service.py  authentication_service.py  csrf_service.py  email_service.py  encryption_service.py  market_data_aggregator.py  oauth_service.py  password_service.py  rate_limiter.py  scheduler_service.py  token_service.py  user_service.py
src/utils/: config.py  event_store.py  logger.py  metrics.py  trace_context.py
tests/: __init__.py  conftest.py  test_analysis_engine.py  test_auth_models.py  test_auth_routes.py  test_auth_user_service.py  test_authentication_e2e.py  test_authentication_service.py  test_config.py  test_csrf_service.py  test_dashboard_api.py  test_debug_endpoints.py  test_dependencies.py  test_email_service.py  test_encryption_service.py  test_error_handling_properties.py  test_error_handling_unit.py  test_event_store.py  test_integration_e2e.py  test_logger.py  test_market_data_aggregator.py  test_metrics.py  test_oauth_service.py  test_password_service.py  test_protected_endpoints_integration.py  test_rate_limiter.py  test_scheduler_service.py  test_token_service.py  test_trace_context.py  test_user_routes.py  test_user_service.py
(+2 files in other folders)
