[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-market-tips"
version = "1.0.0"
description = "Expert-analyzed market insights for cryptocurrencies and stocks delivered via email and web dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Daily Market Tips Team"}
]
keywords = ["trading", "market-analysis", "email", "dashboard", "crypto", "stocks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "apscheduler==3.10.4",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "hypothesis==6.88.0",
    "pytest-cov==4.1.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
    "bandit==1.7.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/daily-market-tips"
Repository = "https://github.com/yourusername/daily-market-tips.git"
Issues = "https://github.com/yourusername/daily-market-tips/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "PT", "RUF"]
ignore = ["E501", "A003", "PT001"]
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/api/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [".venv", "venv", "__pycache__"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "hypothesis==6.88.0",
    "pytest-cov==4.1.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
    "bandit==1.7.5",
]
